src/style.css
@font-face {
  font-family: Mojang-Regular; /* set name */
  src: url(/src/assets/fonts/Mojang-Regular.ttf); /* url of the font */
}

:root {
    --tooltip-texture-path:        url("/src/assets/texturePacks/TextureNotFound.png");
    --tooltip-frame-texture-path:  url("/src/assets/texturePacks/TextureNotFound.png");
}

.ToolTip {
    --border-image-width: 50px;
    padding: 60px 80px 60px 80px;
    shape-rendering: geometricPrecision;
    /* background-clip: border-box; */
    border-image: var(--tooltip-texture-path) 10 fill;
    border-image-width: var(--border-image-width);
}

.ToolTip:after {
    content: '';
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
    position: absolute;
    shape-rendering: geometricPrecision;
    border-image: var(--tooltip-frame-texture-path) 10 fill;
    border-image-width: var(--border-image-width);
}

/* svg { */
/*   transform: translateZ(0);  /* own compositing layer (removes blur from chrome) */ 
/* } */

.minecraftText {
    user-select: none;
    margin: 0;
    font-family: Mojang-Regular;
    color: white;
    font-size: 40px;
    text-shadow: 5px 5px #3e3e3e;
    word-spacing: 20px;
    white-space: pre;
}

body {
    margin: 0;
    overflow: hidden;
    image-rendering: pixelated;
}

